@@ -1,3 +1,7 @@
+2013-04-23  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Config.pm: Merged the braa_retries option from trunk.
+
 2013-04-18  Sancho Lerena <slerena@artica.es>
 
 	* util/pandora_db.pl: Added a usleep() inside loops to aliviate
